--- a/ai_market_prediction/n50_dataset_prep.ipynb
+++ b/ai_market_prediction/n50_dataset_prep.ipynb
@@ -88,44 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3636ecc",
+   "execution_count": 22,
+   "id": "fb8bb624",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data shape: (852087, 3)\n",
-      "Date range: 2015-01-09 09:15:00 to 2024-03-27 12:59:00\n",
-      "\n",
-      "Unique times in a day:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Times available: 09:15:00 to 15:29:00\n",
-      "Total minutes per day: 375\n",
-      "\n",
-      "After filtering to market hours (9:15 AM - 3:30 PM):\n",
-      "Filtered data shape: (851460, 3)\n",
-      "\n",
-      "After filtering to market hours (9:15 AM - 3:30 PM):\n",
-      "Filtered data shape: (851460, 3)\n",
-      "\n",
-      "n50_daily_opens shape: (2273, 375)\n",
-      "Index (dates): 2015-01-09 to 2024-03-27\n",
-      "Columns (times): 375 time points\n",
-      "Time range in columns: 09:15 to 15:29\n",
-      "\n",
-      "n50_daily_opens shape: (2273, 375)\n",
-      "Index (dates): 2015-01-09 to 2024-03-27\n",
-      "Columns (times): 375 time points\n",
-      "Time range in columns: 09:15 to 15:29\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -348,45 +314,26 @@
        "[5 rows x 375 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the time range and structure of the data\n",
-    "print(\"Data shape:\", n50_minute_level_opens.shape)\n",
-    "print(\"Date range:\", n50_minute_level_opens.index.min(), \"to\", n50_minute_level_opens.index.max())\n",
-    "print(\"\\nUnique times in a day:\")\n",
-    "sample_day_times = n50_minute_level_opens.index[n50_minute_level_opens.index.date == n50_minute_level_opens.index.date[0]]\n",
-    "print(f\"Times available: {sample_day_times.time[0]} to {sample_day_times.time[-1]}\")\n",
-    "print(f\"Total minutes per day: {len(sample_day_times)}\")\n",
-    "\n",
-    "# Filter data for standard market hours (9:15 AM to 3:30 PM)\n",
     "market_hours_filter = (n50_minute_level_opens.index.time >= pd.Timestamp('09:15:00').time()) & \\\n",
     "                      (n50_minute_level_opens.index.time <= pd.Timestamp('15:30:00').time())\n",
     "\n",
-    "n50_market_hours = n50_minute_level_opens[market_hours_filter].copy()\n",
+    "n50_min_opens = n50_minute_level_opens[market_hours_filter].copy()\n",
     "\n",
-    "print(f\"\\nAfter filtering to market hours (9:15 AM - 3:30 PM):\")\n",
-    "print(f\"Filtered data shape: {n50_market_hours.shape}\")\n",
+    "n50_min_opens['date'] = n50_min_opens.index.date\n",
+    "n50_min_opens['time'] = n50_min_opens.index.strftime('%H:%M')\n",
     "\n",
-    "# Extract date and time components (removing seconds from time)\n",
-    "n50_market_hours['date'] = n50_market_hours.index.date\n",
-    "n50_market_hours['time'] = n50_market_hours.index.strftime('%H:%M')\n",
-    "\n",
-    "# Create pivot table with date as index and time as columns\n",
-    "n50_daily_opens = n50_market_hours.pivot_table(\n",
+    "n50_daily_opens = n50_min_opens.pivot_table(\n",
     "    index='date',\n",
     "    columns='time',\n",
     "    values='Open',\n",
     "    aggfunc='first'  # In case there are duplicates, take the first value\n",
     ")\n",
-    "\n",
-    "print(f\"\\nn50_daily_opens shape: {n50_daily_opens.shape}\")\n",
-    "print(f\"Index (dates): {n50_daily_opens.index[0]} to {n50_daily_opens.index[-1]}\")\n",
-    "print(f\"Columns (times): {len(n50_daily_opens.columns)} time points\")\n",
-    "print(f\"Time range in columns: {n50_daily_opens.columns[0]} to {n50_daily_opens.columns[-1]}\")\n",
     "\n",
     "n50_daily_opens.head()"
    ]
